[package]
name = "yew-tauri-hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync"]}
tauri = { version = "1.6.1", features = [] , optional = true}
serde_json = {version = "*"}
serde = {version = "*"}
futures-util = {version="0.3.30", optional = true}
wasm-bindgen = {version="0.2.92", optional = true}
yew = {version = "0.21.0", feature=["csr"], optional = true}
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["tauri", "event"], optional = true}
gloo-console = {version = "0.3.0", optional = true}
gloo-timers = {version = "0.3.0", features = ["futures"], optional = true}
console_error_panic_hook = {version = "0.1.7", optional = true}

[features]
tauri = ["dep:tauri"]
wasm = ["dep:wasm-bindgen", "dep:yew", "dep:futures-util", "dep:tauri-sys", "dep:console_error_panic_hook", "dep:gloo-timers"]
console = ["dep:gloo-console"]
